fix(android): use remove(0) instead of removeFirst() for compatibility with Android < 15